--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script defer src="./js/quotes.js"></script>
     <script defer src="./js/background.js"></script>
     <script defer src="./js/todo.js"></script>
+    <script defer src="./js/weather.js"></script>
     <title>Momentum App</title>
   </head>
   <body>
@@ -29,6 +30,10 @@
     </form>
     <ul id="todo-list"></ul>
     <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
+    <div id="weather">
       <span></span>
       <span></span>
     </div>
